# pie

./: .editorconfig  .env  .gitignore  404.html  Cargo.toml  README.md  ayu-highlight.css  book.js  diff2html.min.css  highlight.css  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.github/workflows/: build.yml  publish-tutorial.yml  test.yml  tutorial.yml
.run/: Bench all.run.xml  DT file_stamp_tests.run.xml  DT serde_tests.run.xml  DT test_require_task.run.xml  DT top_down.run.xml  DT topdown_runner_tests.run.xml  Install mdbook-diff2html.run.xml  R stepper --debug.run.xml  R stepper --info.run.xml  R stepper.run.xml  T all.run.xml  Update.run.xml
0_intro/: index.html
0_intro/1_setup/: index.html
0_setup/: Cargo.toml
1_api/: index.html
1_api/0_api/: a_api.rs
1_api/1_non_incremental/: d_test.rs
1_programmability/: index.html
1_programmability/0_setup/: index.html
1_programmability/1_api/: a_api.rs  index.html
1_programmability/2_non_incremental/: a_context_module.rs  c_non_incremental_context.rs  e_test_problematic.rs  index.html
2_incrementality/: index.html
2_incrementality/0_introduction/: index.html
2_incrementality/1_require_file/: a_context.rs  c_fs.rs  g_fs_test.rs  h_non_incremental_context.rs  index.html
2_incrementality/2_stamp/: a_module.rs  c_output.rs  d2_test_utilities.rs  d3_test_correct.rs  e_context_file.rs  index.html
2_incrementality/3_dependency/: a_module.rs  b_file.rs  c_task.rs  d_dependency.rs  e_test.rs  index.html
2_incrementality/4_store/: b_module.rs  c_basic.rs  d1_mapping_diff.rs  g_dependency.rs  h_reset.rs  i_test_file_mapping.rs  index.html  j_test_task_mapping.rs  k_test_task_output.rs  m_test_reset.rs
2_incrementality/5_context/: b_basic.rs  e_task.rs  g_check.rs  h_error_field.rs  i_error_store.rs  index.html
2_incrementality/5b_context_example/: a_task.rs  b_read_task.rs  c_write_task.rs  d_main.rs  e_reuse.rs  f_file_dep.rs  g_new_task.rs  h_file_and_task_dep.rs  i_early_cutoff.rs  j_regen_file.rs  l_diff_stamp.rs
2_incrementality/6_example/: b_main.rs  c_reuse.rs  e_diff_task.rs  f_diff_stamp.rs  index.html
2_top_down/: index.html
2_top_down/0_require_file/: c_fs.rs  f_Cargo.toml  h_non_incremental_context.rs
2_top_down/1_stamp/: a_module.rs  d_test.rs
2_top_down/2_stamp_context/: a2_context.rs  b_non_incremental_context.rs
2_top_down/3_dependency/: b_file.rs  d_dependency.rs  e_test.rs
2_top_down/4_store/: a_Cargo.toml  c_basic.rs  f_output.rs  i_test_file_mapping.rs  m_test_reset.rs
2_top_down/4_top_down/: initial_context.rs  initial_store.rs
2_top_down/5_context/: b_basic.rs  c_current.rs  e_task.rs  (+1 more)
3_min_sound/: index.html
4_next/: index.html
api/: 2_non_incremental_module.rs  5_test_2.rs  7_test_2.rs.diff  api.html  index.html  non_incremental_test_1.rs
css/: chrome.css  variables.css
dev_ext/: Cargo.toml
dev_shared/: Cargo.toml
dev_shared_external/: Cargo.toml
dev_util/: Cargo.toml
graph/: Cargo.toml
graph/src/: lib.rs
pie/: Cargo.toml
pie/benches/: bottom_up.rs  file_dependency_scalability.rs  scalability.rs  top_down.rs  topdown_bottomup_scalability.rs
pie/examples/: hello_world.rs  map.rs  playground.rs  read_and_write.rs  read_file.rs  trait_object_task.rs
pie/src/: context.rs  dependency.rs  deserialize.rs  fs.rs  lib.rs  output.rs  pie.rs  prelude.rs  runner.rs  serialization.rs  serialize.rs  stamp.rs  store.rs  task.rs  top_down.rs  tracker.rs  trait_object.rs  util.rs
pie/src/context/: bottom_up.rs  mod.rs  naive.rs  non_incremental.rs  top_down.rs
pie/src/resource/: file.rs  map.rs  mod.rs
pie/src/resource/file/: hash_checker.rs
pie/src/runner/: mod.rs  naive.rs  store.rs  topdown.rs
pie/src/tracker/: event.rs  metrics.rs  mod.rs  writing.rs
pie/src/trait_object/: base.rs  collection.rs  mod.rs  resource.rs  serde.rs  task.rs
pie/tests/: bottom_up.rs  common.rs  dependency.rs  file_checker.rs  file_stamp.rs  file_stamp_test.rs  serde.rs  serde_test.rs  serde_tests.rs  top_down.rs  topdown_runner_tests.rs
pie/tests/common/: mod.rs
pie/tests/util/: mod.rs
src/: custom.css  diff.js  diff2html.min.css
tagged_serde/: Cargo.toml
top_down/: 0_fs.rs  0_fs_test.rs  0_lib_a.rs  0_lib_c.rs  0_non_incremental_context_a.rs  1_dependency_module.rs  index.html
tutorial/: .gitignore  README.md  book.toml  diff2html.min.css
tutorial/mdbook-diff2html/: Cargo.toml
tutorial/mdbook-diff2html/src/: lib.rs  main.rs  preprocessor.rs
tutorial/mdbook-treesitter-table-highlight/: Cargo.toml
tutorial/mdbook-treesitter-table-highlight/src/: lib.rs  main.rs
tutorial/stepper/: .env  .gitignore  Cargo.toml
tutorial/stepper/src/: app.rs  cargo.rs  main.rs  modification.rs  output.rs  stepper.rs  util.rs
(+284 files in other folders)
