[package]
name = "pie_graph"
version = "0.1.0"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
slotmap = "1"
hashlink = "0.8"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
default = ["serde"]
serde = ["dep:serde", "slotmap/serde", "hashlink/serde_impl"]
