[package]
name = "pie_graph"
version = "0.0.1"
description = "Modified version of the incremental-topo crate for use in PIE and the PIE tutorial"
repository = "https://github.com/Gohla/pie"
edition = "2021"
authors = ["Gabriel Konat <gabrielkonat@gmail.com>"]
license = "Apache-2.0"

[dependencies]
slotmap = "1"
hashlink = "0.8"
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
default = ["serde"]
serde = ["dep:serde", "slotmap/serde", "hashlink/serde_impl"]
