[package]
name = "pie"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pie_graph = { path = "../graph" }
dyn-clone = "1"
serde_flexitos = "0.2"
serde = "1"
erased-serde = "0.4"
sha2 = { version = "0.10", optional = true }

[dev-dependencies]
dev_util = { path = "../dev_util" }
dev_ext = { path = "../dev_ext" }
assert_matches = "1"
testresult = "0.4"

[features]
file_hash_checker = ["dep:sha2"]


[[test]]
name = "top_down"
required-features = ["file_hash_checker"]

[[test]]
name = "file_checker"
required-features = ["file_hash_checker"]
