[package]
name = "mdbook-diff2html"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
mdbook = "0.4"
pulldown-cmark = "0.9"
clap = "4"
serde_json = "1"
semver = "1"
anyhow = "1"

# Empty workspace to ensure this is not part of the workspace in the root, because this is a separate project.
[workspace]
