[package]
name = "stepper"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tempfile = "3"
duct = "0.13"
diffy = "0.3"
similar = "2"
dunce = "1"
path-slash = "0.2"
termtree = "0.4"
zip = "0.6"
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }

# Empty workspace to ensure this is not part of the workspace in the root, because this is a separate project.
[workspace]
